RESOLVED FIXED 49918
[Qt] StillImage::draw() shouldn't call setCompositionMode() unless the QPaintEngine has Porter-Duff composition
https://bugs.webkit.org/show_bug.cgi?id=49918
Summary [Qt] StillImage::draw() shouldn't call setCompositionMode() unless the QPaint...
Andreas Kling
Reported 2010-11-22 09:30:09 PST
To avoid QPainter moaning on the console. Basically, we need to check if (painter->paintEngine()->hasFeature(QPaintEngine::PorterDuff)). Note that this isn't relevant when painting on a QImage.
Attachments
Proposed patch (1.83 KB, patch)
2010-12-15 09:49 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2010-12-15 09:49:07 PST
Created attachment 76657 [details] Proposed patch
Ariya Hidayat
Comment 2 2010-12-15 15:26:02 PST
Comment on attachment 76657 [details] Proposed patch LGTM.
WebKit Commit Bot
Comment 3 2010-12-15 17:08:26 PST
The commit-queue encountered the following flaky tests while processing attachment 76657 [details]: fast/canvas/webgl/tex-sub-image-2d.html bug 51153 (authors: abarth@webkit.org, kbr@google.com, and zmo@google.com) accessibility/media-element.html bug 51154 (author: eric.carlson@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2010-12-15 17:15:59 PST
Comment on attachment 76657 [details] Proposed patch Clearing flags on attachment: 76657 Committed r74165: <http://trac.webkit.org/changeset/74165>
WebKit Commit Bot
Comment 5 2010-12-15 17:16:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.