2010-12-15  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Ariya Hidayat.

        [Qt] StillImage::draw() shouldn't call setCompositionMode() unless the QPaintEngine has Porter-Duff composition
        https://bugs.webkit.org/show_bug.cgi?id=49918

        Go through GraphicsContext::setCompositeOperation() which does the check for us.

        * platform/graphics/qt/StillImageQt.cpp:
        (WebCore::StillImage::draw):

git-svn-id: svn://svn.chromium.org/blink/trunk@74165 bbb929c8-8fbe-4397-9dbb-9b2b20218538